add reserved resources to appt
